fix bookdetail crash issue

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,6 +12,6 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/about"
-        android:title="关于"
+        android:title="@string/about"
         app:showAsAction="never" />
 </menu>
