--- a/ireader/src/main/res/layout/activity_more_setting.xml
+++ b/ireader/src/main/res/layout/activity_more_setting.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="音量键翻页" />
+            android:text="@string/nb.read.setting.audio_button" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/more_setting_sc_volume"
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="全屏模式" />
+            android:text="@string/nb.read.setting.full_screen" />
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/more_setting_sc_full_screen"
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:text="繁簡轉換" />
+            android:text="@string/nb.read.setting.fanjian" />
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/more_setting_sc_convert_type"
