--- a/ireader/src/main/res/layout/dialog_read_setting.xml
+++ b/ireader/src/main/res/layout/dialog_read_setting.xml
@@ -63,7 +63,7 @@
             android:layout_width="40dp"
             android:layout_height="35dp"
             android:gravity="center"
-            android:text="系统"
+            android:text="@string/nb.read.setting.system"
             android:button="@null"
             android:textColor="@color/selector_btn_read_setting"
             android:background="@drawable/selector_btn_read_setting"
@@ -114,7 +114,7 @@
             android:layout_width="40dp"
             android:layout_height="@dimen/nb.read_setting.btn_height"
             android:gravity="center"
-            android:text="默认"
+            android:text="@string/nb.read.setting.default"
             android:button="@null"
             android:textColor="@color/selector_btn_read_setting"
             android:background="@drawable/selector_btn_read_setting"
@@ -133,7 +133,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/nb.read_setting.btn_height"
             android:layout_weight="1"
-            android:text="仿真"
+            android:text="@string/nb.read.setting.simulation"
             android:textSize="14dp"
             android:layout_marginRight="18dp"
             android:gravity="center"
@@ -146,7 +146,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/nb.read_setting.btn_height"
             android:layout_weight="1"
-            android:text="覆盖"
+            android:text="@string/nb.read.setting.cover"
             android:textSize="14dp"
             android:gravity="center"
             android:layout_marginRight="18dp"
@@ -159,7 +159,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/nb.read_setting.btn_height"
             android:layout_weight="1"
-            android:text="滑动"
+            android:text="@string/nb.read.setting.scroll"
             android:textSize="14dp"
             android:gravity="center"
             android:layout_marginRight="18dp"
@@ -173,7 +173,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/nb.read_setting.btn_height"
             android:layout_weight="1"
-            android:text="滚动"
+            android:text="@string/nb.read.setting.scroll"
             android:textSize="14dp"
             android:gravity="center"
             android:layout_marginRight="18dp"
@@ -186,7 +186,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/nb.read_setting.btn_height"
             android:layout_weight="1"
-            android:text="无"
+            android:text="@string/nb.read.setting.nothing"
             android:textSize="14dp"
             android:gravity="center"
             android:button="@null"
@@ -207,7 +207,7 @@
         android:id="@+id/read_setting_tv_more"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="更多设置 >>"
+        android:text="@string/nb.read.setting.more"
         android:textColor="@color/nb.read.menu.text"
         android:gravity="center_horizontal"
         android:layout_marginTop="20dp" />
