--- a/ireader/src/main/res/layout/activity_read.xml
+++ b/ireader/src/main/res/layout/activity_read.xml
@@ -102,7 +102,7 @@
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="上一章" />
+                    android:text="@string/nb.read.pre_chapter" />
 
                 <SeekBar
                     android:id="@+id/read_sb_chapter_progress"
@@ -122,7 +122,7 @@
                     android:layout_width="80dp"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="下一章" />
+                    android:text="@string/nb.read.next_chapter" />
             </LinearLayout>
 
             <!--菜单栏-->
@@ -176,7 +176,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="15dp"
-            android:text="目录"
+            android:text="@string/nb.read.category"
             android:textColor="@color/nb.text.default"
             android:textSize="20sp" />
 
