--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,21 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
+    tools:context="com.book.novel.activity.MainActivity">
 
-    <include android:id="@+id/main_toolbar" layout="@layout/toolbar" />
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Theme.ToolBar.Menu">
+        <android.support.v7.widget.AppCompatSpinner
+            android:id="@+id/main_toolbar_spinner"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content" />
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/main_fl_content"
