--- a/app/src/main/res/layout/toolbar_spinner_item.xml
+++ b/app/src/main/res/layout/toolbar_spinner_item.xml
@@ -7,4 +7,5 @@
     android:ellipsize="marquee"
     android:singleLine="true"
     android:textAlignment="inherit"
-    android:textColor="@color/white" />
+    android:textColor="@color/white"
+    android:textSize="@dimen/toolbar_spinner_text_size" />
