--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="bookcity_recycler_item_head_height">50dp</dimen>
     <dimen name="common_divider_vertical_width">2dp</dimen>
     <dimen name="book_item_padding">10dp</dimen>
+    <dimen name="toolbar_spinner_text_size">18sp</dimen>
+    <dimen name="toolbar_spinner_dropdown_item_width">100dp</dimen>
 </resources>
