--- a/ireader/src/main/res/layout/activity_read.xml
+++ b/ireader/src/main/res/layout/activity_read.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <com.book.ireader.widget.page.FullRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/theme_leather_bg">
@@ -30,10 +30,10 @@
             android:layout_marginBottom="10dp"
             android:background="@color/nb.read.menu.bg"
             android:gravity="center"
-            android:paddingBottom="8dp"
             android:paddingLeft="12dp"
-            android:paddingRight="12dp"
             android:paddingTop="8dp"
+            android:paddingRight="12dp"
+            android:paddingBottom="8dp"
             android:text="1/12"
             android:textColor="@color/white"
             android:visibility="gone" />
@@ -130,8 +130,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="72dp"
                 android:orientation="horizontal"
-                android:paddingBottom="12dp"
-                android:paddingTop="12dp">
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp">
 
                 <TextView
                     android:id="@+id/read_tv_category"
@@ -158,7 +158,7 @@
                     android:text="@string/nb.read.setting" />
             </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
+    </com.book.ireader.widget.page.FullRelativeLayout>
 
     <!--侧滑栏-->
     <LinearLayout
@@ -168,14 +168,14 @@
         android:background="@drawable/theme_leather_bg"
         android:clickable="true"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/nb.padding.large"
-        android:paddingTop="@dimen/nb.padding.large">
+        android:paddingTop="@dimen/nb.padding.large"
+        android:paddingBottom="@dimen/nb.padding.large">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/nb.read.category"
             android:textColor="@color/nb.text.default"
             android:textSize="20sp" />
