--- a/ireader/src/main/res/layout/activity_read.xml
+++ b/ireader/src/main/res/layout/activity_read.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.book.ireader.widget.page.FullRelativeLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/theme_leather_bg">
@@ -158,7 +158,7 @@
                     android:text="@string/nb.read.setting" />
             </LinearLayout>
         </LinearLayout>
-    </com.book.ireader.widget.page.FullRelativeLayout>
+    </RelativeLayout>
 
     <!--侧滑栏-->
     <LinearLayout
